[task#2][fix] Fix de cards display using flex mode and wrap

--- a/task02-pixel-perfect/src/css/styles.css
+++ b/task02-pixel-perfect/src/css/styles.css
@@ -1,12 +1,13 @@
 @import url("config.css");
 
 .cards-container {
-    display: flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .card {
     position: relative;
-    display: inline-flex;
     text-align: center;
     margin-right: 20px;
 }
